--- a/README
+++ b/README
@@ -3,12 +3,12 @@ Serviio plugin for 1tv.ru videoarchive online content
 
 # Installation
 Read readme at serviio site, in short you just need to put
-[plugin file](https://raw.github.com/jfhs/1tv_plugin/master/src/tv1ru.groovy "plugin file") to plugins directory,
+[plugin file]: https://raw.github.com/jfhs/1tv_plugin/master/src/tv1ru.groovy to plugins directory,
 which is inside serviio root.
 
 # Usage
 Currently live-stream is not supported, only video from archive is available.
-You should put a link to full-list of videos like [http://www.1tv.ru/videoarchiver/id=-2&f=6222&pg=1](http://www.1tv.ru/videoarchiver/id=-2&f=6222&pg=1)
+You should put a link to full-list of videos like http://www.1tv.ru/videoarchiver/id=-2&f=6222&pg=1
 as a Web Source in Online sources in Library tab.
 
 # To do
