--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Serviio plugin for 1tv.ru videoarchive online content
 
 # Installation
-Read readme at serviio site, in short you just need to put [plugin file](https://raw.github.com/jfhs/1tv_plugin/master/src/tv1ru.groovy to plugins directory), which is inside serviio root.
+Read readme at serviio site, in short you just need to put [plugin file](#https://raw.github.com/jfhs/1tv_plugin/master/src/tv1ru.groovy) to plugins directory, which is inside serviio root.
 
 # Usage
 Currently live-stream is not supported, only video from archive is available.
